# metabase-python

./: .gitignore  .pre-commit-config.yaml  LICENSE  Makefile  Pipfile  README.md  codeql-analysis.yml  docker-compose.yml  pyproject.toml  setup.cfg  setup.py
.github/workflows/: ci.yml  main.yml  publish.yml  python-package.yml
.semaphore/: package.yml  package_test.yml  semaphore.yml
metabase/: __init__.py  database.py  metabase.py  missing.py  permission.py  resource.py  user.py
metabase/resources/: database.py  dataset.py  field.py  metric.py  permission_group.py  permission_membership.py  segment.py  table.py  user.py
src/metabase/: __init__.py  exceptions.py  metabase.py  missing.py  resource.py
src/metabase/mbql/: __init__.py  aggregations.py  base.py  filter.py  groupby.py  query.py
src/metabase/resources/: card.py  dashboard.py  database.py  dataset.py  field.py  metric.py  permission_group.py  permission_membership.py  segment.py  table.py  user.py
tests/: helpers.py  test_metabase.py  test_resource.py
tests/mbql/: test_aggregations.py  test_base.py  test_filter.py  test_groupby.py  test_query.py
tests/resources/: test_card.py  test_database.py  test_dataset.py  test_field.py  test_metric.py  test_permission_group.py  test_permission_membership.py  test_segment.py  test_table.py  test_user.py
