[tool.poetry]
name = "metabase-python"
version = "0.0.0"
description = "Python wrapper for interacting with the Metabase API."
authors = ["Charles Lariviere"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/chasleslr/metabase-python"
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
packages = [
    { include = "metabase", from = "src" },
]

[tool.poetry.dependencies]
python = "^3.7"
requests = "*"
pandas = "^1.0.0"

[tool.poetry.dev-dependencies]
black = "22.1.0"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.isort]
profile = "black"
