[metadata]
name = metabase-python
version = 0.0.1
author = Charles Lariviere
author_email = charleslariviere1@gmail.com
description = A Python wrapper for interacting with Metabase's API.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/chasleslr/metabase-python
project_urls =
    Bug Tracker = https://github.com/chasleslr/metabase-python
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = metabase
packages = find:
python_requires = >=3.6

[options.packages.find]
where = metabase
